--- a/en-US/index.html
+++ b/en-US/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html><html lang="fr-CA" dir="ltr"><head>
+<!DOCTYPE html><html lang="en-US" dir="ltr"><head>
   <meta charset="utf-8">
   <title>ProjetFinalAngular</title>
-  <base href="/fr-CA/">
+  <base href="/en-US/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
